--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "@storybook/addon-links": "^5.0.10",
     "@storybook/addons": "^5.0.10",
     "@storybook/react": "^5.0.10",
+    "@testing-library/dom": "^6.0.0",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
     "@testing-library/react-hooks": "^1.1.0",
     "babel-loader": "^8.0.5",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
     "react-test-renderer": "^16.9.0-alpha.0"
   },
   "jest": {
