--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,32 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
+  deploy:
+    machine:
+      enabled: true
 
+    working_directory: ~/client
+
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "f0:45:f5:d1:e7:39:39:15:63:8c:8b:3e:a1:c9:79:e9"
+      - checkout
+      - run:
+          name: Push Master to Production
+          command: |
+            git push https://github.com/kendallrowe/scheduler.git master:production
 workflows:
   version: 2
-  test:
+  test_and_deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: production
+      - deploy:
+          filters:
+            branches:
+              ignore: production
+          requires:
+            - build
