--- a/netlify.toml
+++ b/netlify.toml
@@ -12,5 +12,5 @@
   command = "npm run build"
 
 [build.environment]
-  REACT_APP_API_BASE_URL =https://kr-scheduler-lhl.herokuapp.com
-  REACT_APP_WEBSOCKET_URL =wss://kr-scheduler-lhl.herokuapp.com
+  REACT_APP_API_BASE_URL = "https://kr-scheduler-lhl.herokuapp.com"
+  REACT_APP_WEBSOCKET_URL = "wss://kr-scheduler-lhl.herokuapp.com"
