--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-REACT_APP_API_BASE_URL=http://localhost:3001
-REACT_APP_WEBSOCKET_URL=ws://localhost:3001
+REACT_APP_API_BASE_URL=https://kr-scheduler-lhl.herokuapp.com
+REACT_APP_WEBSOCKET_URL=wss://kr-scheduler-lhl.herokuapp.com
 CHOKIDAR_USEPOLLING=true
